--- a/src/components/ShelfSlider/global.css
+++ b/src/components/ShelfSlider/global.css
@@ -11,6 +11,7 @@
   line-height: 0;
   position: absolute;
   top: 50%;
+  right: 20px;
   display: block;
   width: 20px;
   height: 20px;
@@ -25,7 +26,7 @@
   background: transparent;
 }
 
-.slick-left {
+.slick-prev {
   font-size: 0;
   line-height: 0;
   position: absolute;
@@ -34,6 +35,8 @@
   width: 20px;
   height: 20px;
   padding: 0;
+  left: 0;
+  cursor: pointer;
   -webkit-transform: translate(0, -50%);
   -ms-transform: translate(0, -50%);
   transform: translateY(-50%);
@@ -42,4 +45,9 @@
   border: none;
   outline: none;
   background: transparent;
+}
+
+.slick-next:before,
+.slick-prev:before {
+  display: none;
 }
