--- a/src/components/Nav/global.css
+++ b/src/components/Nav/global.css
@@ -8,5 +8,6 @@
   background-image: url('/src/assets/header/vestido.svg');
   display: block;
   width: 20px;
+  height: 20px;
   background-repeat: no-repeat;
 }
