style: altyera product-details

--- a/src/components/ShelfSlider/global.css
+++ b/src/components/ShelfSlider/global.css
@@ -1,53 +1,4 @@
-.slick-list {
-  position: relative;
-  display: block;
-  overflow: hidden;
-  margin: 0;
-  padding: 0;
-}
-
-.slick-next {
-  font-size: 0;
-  line-height: 0;
-  position: absolute;
-  top: 50%;
-  right: 20px;
-  display: block;
-  width: 20px;
-  height: 20px;
-  padding: 0;
-  -webkit-transform: translate(0, -50%);
-  -ms-transform: translate(0, -50%);
-  transform: translateY(-50%);
-  cursor: pointer;
-  color: transparent;
-  border: none;
-  outline: none;
-  background: transparent;
-}
-
-.slick-prev {
-  font-size: 0;
-  line-height: 0;
-  position: absolute;
-  top: 50%;
-  display: block;
-  width: 20px;
-  height: 20px;
-  padding: 0;
-  left: 0;
-  cursor: pointer;
-  -webkit-transform: translate(0, -50%);
-  -ms-transform: translate(0, -50%);
-  transform: translateY(-50%);
-  cursor: pointer;
-  color: transparent;
-  border: none;
-  outline: none;
-  background: transparent;
-}
-
-.slick-next:before,
-.slick-prev:before {
-  display: none;
+.shelf__product:hover {
+  box-shadow: rgba(0, 0, 0, 0.08) 0px 4px 12px;
+  transition: all 0.3s ease 0s;
 }
