--- a/src/components/TipBar/global.css
+++ b/src/components/TipBar/global.css
@@ -7,7 +7,7 @@
   padding-left: 20px;
 
   @media (min-width: 1024px) {
-    justify-content: center;
+    justify-content: space-evenly;
     gap: 1rem;
     padding-inline: 1rem;
   }
